# CLR1-Parser-mipt-FL

./: CMakeLists.txt  README.md  main.cpp  run.sh
headers/: CLR1_parser.h
parser_tests/: CMakeLists.txt  parser_tests.cpp
sources/: CLR1_parser.cpp
